samples/_failures_safe/1761096271_d09c50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0d56c95.c: In function ‘main’:
./samples/SAFE/__tmp_a0d56c95.c:137:28: error: missing terminating " character
  137 |                     printf("Error reading second
      |                            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a0d56c95.c:137:21: error: expected expression at end of input
  137 |                     printf("Error reading second
      |                     ^~~~~~
./samples/SAFE/__tmp_a0d56c95.c:137:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0d56c95.c:137:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0d56c95.c:137:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0d56c95.c:137:21: error: expected declaration or statement at end of input
